# yek

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FINAL_VERIFICATION_SUMMARY.md  GREPTILE_REVIEW_FIXES_SUMMARY.md  Makefile  PR_191_Review_Request_Documentation.md  README.md  bench.toml  cliff.toml  comments.json  model_manager.rs  semantic-release.toml  yek.core.rb  yek.toml  yek.yaml
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ailoop.yaml  bench.yml  ci.yml  perf.yml  release.yml  reusable-build.yml  test-install.yml
Formula/: yek.rb
benches/: serialization.rs
prompts/: diff.txt  fix-tests.txt  implement.txt  pr1.txt  remove-chunk.txt
scripts/: ai-loop.sh  ailoop.ts  download-tokenizers.sh  install_yek.ps1  install_yek.sh  make-release.sh
src/: category.rs  config.rs  defaults.rs  error.rs  lib.rs  main.rs  main_new.rs  model_manager.rs  models.rs  parallel.rs  parallel_fixed.rs  pipeline.rs  priority.rs  repository.rs  tree.rs
tests/: category_test.rs  config_test.rs  config_unignore_test.rs  e2e_test.rs  error_test.rs  extra_tests.rs  git_priority_tests.rs  integration_common.rs  integration_tests.rs  lib_test.rs  line_numbers_test.rs  main_test.rs  misc_test.rs  mod.rs  model_manager.rs  models_test.rs  output_dir_output_name_test.rs  parallel_test.rs  pipeline_test.rs  priority_test.rs  repository_test.rs  stdin_test.rs  symlink_test.rs  test_basic.rs  test_binary_files.rs  test_chunk_order.rs  test_e2e.rs  test_e2e.rs.backup  test_e2e.rs2  test_gitignore_e2e.rs  test_helpers.sh  test_ignore_patterns.rs  test_install_script.sh  test_installers.rs  test_max_size.rs  test_multiple_dirs.rs  test_normalize_path.rs  test_part_order.rs  test_perf.rs  test_priority.rs  (+7 more)
voltagent/src/: databricks-provider.ts  index.ts
