[package]
name = "yek"
version = "0.13.8"
edition = "2021"
description = "A tool to serialize a repository into a single text file"
license = "MIT"
repository = "https://github.com/mohsen-w-elsayed/yek"
readme = "README.md"
keywords = ["git", "repository", "serialization", "text"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
byte-unit = "4.0"
clap = { version = "4.4", features = ["derive"] }
crossbeam = "0.8"
ignore = "0.4.20"
indicatif = "0.17.7"
num_cpus = "1.16"
rayon = "1.8.0"
regex = "1.10"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0"
sha2 = "0.10"
time = "0.3"
toml = "0.8.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
path-slash = "0.2.1"
git2 = "0.18.1"
crossbeam-channel = "0.5"
serde_json = "1.0.107"
tiktoken-rs = "0.5.2"
tokenizers = "0.15.0"
lazy_static = "1.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
chrono = "0.4"
predicates = "3.0.4"
tempfile = "3.8.0"
criterion = "0.5"
rand = "0.8"
git-cliff = "1.4.0"
regex = "1.10.3"
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
env_logger = "0.11"

[[bench]]
name = "serialization"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
