[package]
name = "yek"
version = "0.13.9"
edition = "2021"
description = "A tool to serialize a repository into chunks of text files"
license = "MIT"
repository = "https://github.com/mohsen-w-elsayed/yek"
readme = "README.md"
keywords = ["git", "repository", "serialization", "text", "chunks"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
byte-unit = "4.0"
clap = { version = "4.4", features = ["derive"] }
clap-config-file = "0.4.0"
crossbeam = "0.8"
ignore = "0.4"
indicatif = "0.17"
num_cpus = "1.16"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
sha2 = "0.10"
time = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.4"
path-slash = "0.2.1"
git2 = { version = "0.18.2", features = ["vendored-openssl", "https"] }
crossbeam-channel = "0.5"
serde_yaml = "0.9.34"
serde_json = "1.0.137"
config = "0.15.6"
content_inspector = "0.2.4"
normalize-path = "0.2.1"
bytesize = "1.3.0"
atty = "0.2.14"
glob = "0.3.2"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0"
chrono = "0.4"
predicates = "3.0"
tempfile = "3.9"
criterion = "0.5"
rand = "0.8"
git-cliff = "1.4.0"

[[bench]]
name = "serialization"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
